--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/dns",
+    "name": "dezio/dns",
     "description": "Retrieve DNS records",
     "keywords": [
         "spatie",
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.3",
         "symfony/process": "^5.0"
     },
     "require-dev": {
